# pytest-tia

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  publish.yml
examples/calc/: calc.py  test_calc.py
examples/ci/: github-actions.yml
examples/plugins/: registry.py  test_registry.py
tests/: test_changes_m1_m2.py  test_core.py  test_diff_dynscan_report.py  test_dynscan_globals.py  test_server_astmap.py  test_store_resolve.py
tia/: __init__.py  __main__.py  astmap.py  cli.py  diff.py  dynscan.py  plugin.py  remotestore.py  resolve.py  select.py  server.py  store.py
